fix: fix missing margin-top styling of heading-secondary

--- a/Natours/starter/scss/base/_typography.scss
+++ b/Natours/starter/scss/base/_typography.scss
@@ -43,6 +43,7 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
+  margin-bottom: 6rem;
   display: inline-block;
   background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
   -webkit-background-clip: text;
